# CMakeStarter

./: CMakeLists.txt  LICENSE  README.md
CMake/Macros/: 3rdParty.cmake  3rdPartyUtility.cmake  Add3rdPartyLibrary.cmake  Install.cmake  Project.cmake  Scan3rdParty.cmake  Scan3rdPartyUtility.cmake  Utility.cmake
CMake/Macros/3rdparties/: graphics.cmake  math.cmake
CMake/Modules/: Name.cmake
apps/Sample/: CMakeLists.txt
apps/Sample/src/: main.cpp
